[project]
name = "image-ai"
version = "0.1.0"
description = "A simple text-to-image generator using Hugging Face's Stable Diffusion model."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "diffusers",
    "transformers",
    "accelerate",
    "torch",
    "huggingface_hub",
    "python-dotenv",
]
